@@ -29,8 +29,14 @@ rampant-evolution--technology-chemical-science-multipler=Chemical Science Weight
 rampant-evolution--technology-production-science-multipler=Production Science Weight
 rampant-evolution--technology-utility-science-multipler=Utility Science Weight
 rampant-evolution--technology-space-science-multipler=Space Science Weight
+rampant-evolution--evolutionPerLowPlayer=Evolution per low value player structure killed
+rampant-evolution--evolutionPerMediumPlayer=Evolution per medium value player structure killed
+rampant-evolution--evolutionPerHighPlayer=Evolution per high value player structure killed
 
 [mod-setting-description]
+rampant-evolution--evolutionPerLowPlayer=Low value player structures include:\nammo-turret\nartillery-turret\nelectric-pole\nelectric-turret\nfluid-turret\nThis number should be treated the same as the vanilla pollution, spawner, and time sliders in terms of how to interpret it
+rampant-evolution--evolutionPerMediumPlayer=Medium value player structures include:\naccumulator\ncontainer\nlab\nlogistic-container\nradar\nstorage-tank\nsolar-panel\nThis number should be treated the same as the vanilla pollution, spawner, and time sliders in terms of how to interpret it
+rampant-evolution--evolutionPerHighPlayer=High value player structures include:\nassembling-machine\nbeacon\nboiler\nfurnace\ngenerator\nmining-drill\nreactor\nroboport\nrocket-silo\nThis number should be treated the same as the vanilla pollution, spawner, and time sliders in terms of how to interpret it
 rampant-evolution--researchEvolutionCap=When enabled evolution is capped based on the amount of technology that has been researched. The highest science pack on the technology is how each technology is classified. All infinite technology is excluded. After all technology is classified, the weights for each technology are totalled and then all divided by the total number of technologies. When a technology is researched, the weighted evolution value will be added to the evolution cap.
 rampant-evolution--technology-automation-science-multipler=This weight is relative to the other weights defined. The higher this weight the more influence these technologies wll have on evolution. Check the evolution gui to see a max potential of each technology weight. An example is if this settings is 5 and the rest are 1 then each technology in this group is worth 5 times more than if this weight was also a 1.
 rampant-evolution--technology-logistic-science-multipler=This weight is relative to the other weights defined. The higher this weight the more influence these technologies wll have on evolution. Check the evolution gui to see a max potential of each technology. An example is if this settings is 5 and the rest are 1 then each technology in this group is worth 5 times more than if this weight was also a 1.
@@ -59,7 +65,7 @@ rampant-evolution--shortcut-bar=Display evolution stats gui
 
 [description]
 rampant-evolution--refreshingEvolution=RampantEvolution: Recalculating evolution, this could take several minutes to recalculate. Script times will be higher while reprocessing.
-rampant-evolution--displayEvolutionMsg=RampantEvolution:\n__1__%: Current Evolution\n   __2__%: Tile Absorbed Pollution Contribution\n   __3__%: Tree Absorbed Pollution Contribution\n   __4__%: Tree Damaged By Pollution Contribution\n   __5__%: Spawner Absorbed Pollution Contribution\n   __6__%: Killed Spawners Contribution\n   __7__%: Killed Hives Contribution\n   __8__%: Killed Units Contribution\n   __9__%: Killed Worms Contribution\n   __10__%: Pollution Generated Contribution\n   __11__%: Time Generated Contribution\n   __12__%: Minimum Evolution\n   __13__%: Evolution Research Cap\n   __14__%: 5 Minute Evolution Change\n   __15__%: 30 Minute Evolution Change\n   __16__%: 60 Minute Evolution Change
+rampant-evolution--displayEvolutionMsg=RampantEvolution:\n__1__%: Current Evolution\n   __2__%: Tile Absorbed Pollution Contribution\n   __3__%: Tree Absorbed Pollution Contribution\n   __4__%: Tree Damaged By Pollution Contribution\n   __5__%: Spawner Absorbed Pollution Contribution\n   __6__%: Killed Spawners Contribution\n   __7__%: Killed Hives Contribution\n   __8__%: Killed Units Contribution\n   __9__%: Killed Worms Contribution\n   __10__%: Pollution Generated Contribution\n   __11__%: Time Generated Contribution\n   __12__%: Low Player Entities\n   __13__%: Medium Player Entities\n   __14__%: High Player Entities\n   __15__%: Minimum Evolution\n   __16__%: Evolution Research Cap\n   __17__%: 5 Minute Evolution Change\n   __18__%: 30 Minute Evolution Change\n   __19__%: 60 Minute Evolution Change
 
 rampant-evolution--researchEvolutionCap=Research Cap
 rampant-evolution--evolution=Evolution
@@ -77,8 +83,14 @@ rampant-evolution--minimumEvolution=Min Evo
 rampant-evolution--shortChange=5 Min
 rampant-evolution--longChange=30 Min
 rampant-evolution--longLongChange=60 Min
+rampant-evolution--lowPlayer=Low Player
+rampant-evolution--mediumPlayer=Medium Player
+rampant-evolution--highPlayer=High Player
 
 [tooltip]
+rampant-evolution--lowPlayer=Low value player structures include:\nammo-turret\nartillery-turret\nelectric-pole\nelectric-turret\nfluid-turret
+rampant-evolution--mediumPlayer=Medium value player structures include:\naccumulator\ncontainer\nlab\nlogistic-container\nradar\nstorage-tank\nsolar-panel
+rampant-evolution--highPlayer=High value player structures include:\nassembling-machine\nbeacon\nboiler\nfurnace\ngenerator\nmining-drill\nreactor\nroboport\nrocket-silo
 rampant-evolution--researchEvolutionCap=Current evolution max due to research.\nAutomation research:    __1__% / __2__%\nLogistic research:            __3__% / __4__%\nMilitary research:            __5__% / __6__%\nChemical research:         __7__% / __8__%\nProduction research:      __9__% / __10__%\nUtility research:               __11__% / __12__%\nSpace research:               __13__% / __14__%
 rampant-evolution--evolution=Current evolution of the enemy force
 rampant-evolution--tile=The amount of evolution from pollution absorbed by tiles
