@@ -196,11 +196,44 @@ data:extend({
         },
 
         {
+            type = "double-setting",
+            name = "rampant-evolution--evolutionPerLowPlayer",
+            setting_type = "runtime-global",
+            minimum_value = -100000,
+            maximum_value = 100000,
+            default_value = 0,
+            order = "l[modifier]-mza[unit]",
+            per_user = false
+        },
+
+        {
+            type = "double-setting",
+            name = "rampant-evolution--evolutionPerMediumPlayer",
+            setting_type = "runtime-global",
+            minimum_value = -100000,
+            maximum_value = 100000,
+            default_value = 0,
+            order = "l[modifier]-mzb[unit]",
+            per_user = false
+        },
+
+        {
+            type = "double-setting",
+            name = "rampant-evolution--evolutionPerHighPlayer",
+            setting_type = "runtime-global",
+            minimum_value = -100000,
+            maximum_value = 100000,
+            default_value = 0,
+            order = "l[modifier]-mzc[unit]",
+            per_user = false
+        },
+
+        {
             type = "bool-setting",
             name = "rampant-evolution--researchEvolutionCap",
             setting_type = "runtime-global",
             default_value = false,
-            order = "l[modifier]-mz[unit]",
+            order = "l[modifier]-oz[unit]",
             per_user = false
         },
 
@@ -209,7 +242,7 @@ data:extend({
             name = "rampant-evolution--researchEvolutionCapIncludeUpgrades",
             setting_type = "runtime-global",
             default_value = true,
-            order = "l[modifier]-mz[unit]",
+            order = "l[modifier]-oz[unit]",
             per_user = false
         },
 
@@ -220,7 +253,7 @@ data:extend({
             minimum_value = 0,
             default_value = 1,
             maximum_value = 10000,
-            order = "l[modifier]-mz[unit]",
+            order = "l[modifier]-oza[unit]",
             per_user = false
         },
 
@@ -231,7 +264,7 @@ data:extend({
             minimum_value = 0,
             default_value = 1,
             maximum_value = 10000,
-            order = "l[modifier]-mz[unit]",
+            order = "l[modifier]-ozb[unit]",
             per_user = false
         },
 
@@ -242,7 +275,7 @@ data:extend({
             minimum_value = 0,
             default_value = 1,
             maximum_value = 10000,
-            order = "l[modifier]-mz[unit]",
+            order = "l[modifier]-ozc[unit]",
             per_user = false
         },
 
@@ -253,7 +286,7 @@ data:extend({
             minimum_value = 0,
             default_value = 1,
             maximum_value = 10000,
-            order = "l[modifier]-mz[unit]",
+            order = "l[modifier]-ozd[unit]",
             per_user = false
         },
 
@@ -264,7 +297,7 @@ data:extend({
             minimum_value = 0,
             default_value = 1,
             maximum_value = 10000,
-            order = "l[modifier]-mz[unit]",
+            order = "l[modifier]-oze[unit]",
             per_user = false
         },
 
@@ -275,7 +308,7 @@ data:extend({
             minimum_value = 0,
             default_value = 1,
             maximum_value = 10000,
-            order = "l[modifier]-mz[unit]",
+            order = "l[modifier]-ozf[unit]",
             per_user = false
         },
 
@@ -286,7 +319,7 @@ data:extend({
             minimum_value = 0,
             default_value = 1,
             maximum_value = 10000,
-            order = "l[modifier]-mzz[unit]",
+            order = "l[modifier]-ozg[unit]",
             per_user = false
         }
 })
